pkgs/script-exec/src/snapshots/script_exec__tests__tests__main_multiple.snap
---
source: src/tests.rs
info:
  program: script-exec
  args:
    - success=./examples/success.sh
    - success=./examples/success-1.sh
    - success=./examples/success-3.sh
    - fail=./examples/failing.sh
    - fail=./examples/failing-1.sh
    - fail=./examples/failing-3.sh
---
success: false
exit_code: 1
----- stdout -----
⏳ success
[1A[2K⏳ success
⏳ success
[1A[2K[1A[2K⏳ success
⏳ success
⏳ success
[1A[2K[1A[2K[1A[2K✅ success [<SECONDS>s]
⏳ fail
[1A[2K❌ fail [<SECONDS>s]
Output:
should fail
⏳ fail
[1A[2K✅ success [<SECONDS>s]
⏳ fail
[1A[2K⏳ fail
⏳ fail
[1A[2K[1A[2K❌ fail [<SECONDS>s]
Output:
should fail
✅ success [<SECONDS>s]
❌ fail [<SECONDS>s]
Output:
should fail

----- stderr -----
